# scnt-gui

./: CMakeLists.txt  README.md  settings.env  setup.sh
gtest/: lists_test.cpp
src/: main.cpp
